ChangeLog gvtree V1.1-0
-----------------------

6. February 2022 : Released gvtree V1.1-0


ChangeLog gvtree V1.2-0 dev_1.2
-------------------------------

13. February 2022 : 
	- added dock widget to view other branches
	- fixed font initialization problem
	- fixed compare widget when changing branch or
	  in case of reload

20. February 2022 :
	- fixed -r
	- fixed branchlist, now ignoring "->" branches if not current
	- fixed branchlist, detached HEAD issue
	- selection is kept until RMB context menu "Reset selection" is activated
	- selection of root version blocked
	- removed compiler warnings

30. September 2022 :
	- fixed git log --graph parsing error
	- fixed -f parameter
	- add commit comment to node
	- fixed update of version information regexp
	- sorted version information tabs

1. October 2022 :
	- gvtree-1.3-0-beta.1

2. October 2022 :
	- fixed problem with git log --graph parsing...
	- width of commit comment to prefernces
	- maximum length of commit comment to preferences
	- TODO Stylesheet of QSpinBox not correct

3. October (...) :
	- changed version information to tree widget
	- integrated search line edit into version information dock

14. October 2022 :
	- Release v1.3-0 ;)

17. October 2022 :
	- started dev_1.4
	- added color preferences for tag / version information

19. October 2022 :
	- Version Information is now sorted ascending
	- doc properties title is now gvtree-1.3-0