@@ -51,3 +51,10 @@ ChangeLog gvtree V1.2-0 dev_1.2
 19. October 2022 :
 	- Version Information is now sorted ascending
 	- doc properties title is now gvtree-1.3-0
+
+29. October 2022 :
+	- Colored text
+	- RegExp of static version information not editable
+	-	version information tree compressed
+	- decorations
+	- selection of version node instead of merge arrow
